# miur

./: .agentsignore  .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  .ignore  .pylintrc  AGENTS.md  INFO.nou  LEGEND.nou  Makefile  PKGBUILD  README.md  README.nou  README.rst  TODO.nou  WKLOG.nou  __init__.py  __main__.py  _app.py  alt.py  app.py  arch.nou  cli.py  comparison.nou  curses_cmds.py  curses_ext.py  debug.nou  dev.py  distribution.nou  dom.py  evolution.nou  fdredir.py  fragments.py  fundamental.nou  log.py  miur.py  mod.nou  (+10 more)
.ctags.d/: all.ctags
.reuse/: dep5
OLD/: alt.py  miur.py
OLD/_unused/: send.py
_doc/: TODO.nou  WKLOG.nou
_try/: e57_rq_1proto.py  e5f_jupyter.py
_try/6ao_doc/: INFO.nou  LEGEND.nou  community.nou  editor.nou  evolution.nou
_try/6aq_miur_bus/: miur.py
_try/a1p_miur_zmq/: Makefile  PKGBUILD  README.rst  __init__.py  __main__.py
_try/a1r_concepts/: camera.nou  ioloop.nou  lttng.nou  retrospective-help.nou  tasker.nou  topocomm.nou  topoexec.nou  torrent.nou  workflow.nou
_try/a8f_semantic-db/: 01.py
_try/bc5_miur_asyncio/: app.py  hier_item_render.nou
_try/c76_miur_lisp/: PKGBUILD  compiler.lisp  dom.lisp  miur.asd  miur.lisp  package.lisp
_try/e31_xlr_entity/: e46_ent_3interlace.py  e4d_rq_1async.py
_try/f3j_miur_5panel/: mypy.ini  pyproject.toml  wf
_unused/: clientconnections.py  future.py  send.py  server.py  streamprotocol.py
bare/: TODO.nou  __init__.py  miur
broker/: TODO.nou  hub.py
cfg/conan/: settings_user.yml
ctl/: TODO.nou  ctl.py
curses/: device.py  input.py  output.py
db/: INFO.nou  compile
design/: cursor.nou  dataflow.nou  dom.nou  evolution.nou  exec.nou  history.nou  integration.nou  introspection.nou  node.nou  trasformation.nou  viewer.nou  widget.nou
devhelp/: fdredir.py  newterm.py
doc/: ARCH.nou  DEMO.nou  INFO.nou  LEGEND.nou  arch.dot  arch.nou  comparison.nou  fundamental.nou  mod.nou
doc/design/: evolution.nou  node.nou  view.nou
doc/fmt/: irc.nou  wm.nou
doc/gv/: flow.dot  sharing.dot
doc/mod/: concurrency.nou  core.nou  db.nou  graph.nou  manipulate.nou  open.nou  provider.nou  server.nou  settings.nou  ui.nou  widget.nou
doc/relay/: channel.nou  protocol.nou
docs/: ARCH.nou  TODO.nou
dom/: entity.py  entity_e39.py  entity_e3h_2action.py  entity_e3k_0sketch.py  entity_e3n_2stubs.py  entity_e3r_3actlist.py  entity_e3s_3actlist.py  entity_e3s_3interlace.py  provider.py
events/: TODO.nou
features/: TODO.nou
gv/: cmd.gv  flow.dot
ifc/: __init__.py  log.py  sys.py
integ/: miur-python-shebang.py  miur-shell-aliases.sh  miur-shell-sync-cwd.zsh
ioloop/: TODO.nou
just/_try/: c6i_ex_redir.py  d9i_ex_sigwinch.py
just/src/: __main__.py  cli.py  curses_ext.py
legacy/: g4e_miur_gen
legacy/6ao_doc/: TODO.nou  arch.nou  debug.nou  distribution.nou  mod.nou
legacy/6aq_miur_bus/: alt.py
legacy/a1p_miur_zmq/: .gitignore  Makefile  __init__.py
legacy/a1r_concepts/: camera.nou  cfg.nou  features.nou  uuid.nou
legacy/a8f_semantic-db/: 01.py  compile
legacy/bc5_miur_asyncio/: cli.py
legacy/c76_miur_lisp/: coreimg.lisp  system-index.txt
legacy/e31_xlr_entity/: e3p_ent_2action.py  e3r_ent_3proto.py
legacy/e59_mix/: e5f_jupyter.py  e5r_ps_creationtime.py
legacy/eai_biindex_growing_list/: widget.py
legacy/f3j_miur_5panel/: AGENTS.md
lisp/: aeternum  airywm  coreimg.lisp  croatoan  ctl  loader.lisp  miur.asd  miur.lisp  package.lisp  plugins  system-index.txt  vlime
lisp/log/: 2022-07-05.nou  2022-07-06.nou  2022-07-07.nou  2022-07-11.nou  2022-07.nou  2022-08.nou  WKLOG.nou
logger/: TODO.nou  __init__.py  logger.py  setup.py
lttng/: TODO.nou
main/: __init__.py  main.py
miur/: dom.py
miur/access/: fs.py
miur/alt/: __init__.py  core.py  dom.py  generator.py  graph.py  proto.py  (+2 more)
mod/: concurrency.nou  config.nou  manipulate.nou  provider.nou  server.nou  ui.nou  widget.nou
pager/: TODO.nou
pkg/: PKGBUILD  PKGBUILD.dev  aliases.sh  requirements.txt  requirements_dev.txt  requirements_frozen.txt  wf
pkg/miurapp/: README.rst  pyproject.toml
pkg/miurapp/src/miurapp/: __init__.py  __main__.py
pkg/miurapp/t/: test_app.py
pkg/miurcache/: .clangd  CMakeLists.txt  CMakePresets.json  README.rst  conanfile.py  pyproject.toml
pkg/miurcache-py/: pyproject.toml
pkg/miurcache-py/src/miurcache_py/: __init__.py  store.py
pkg/miurcache/alt/cffi_build_on_import/: graphcore.py
pkg/miurcache/alt/cxx_pybind/: main.cpp  pyproject.toml
pkg/miurcache/alt/setuptools_inof_cmake/: setup.py
pkg/miurcache/ext_cc/: miurcache_core.c  py_ex.c  py_graphcore.c
pkg/miurcache/src/miurcache/: __init__.py  resident.py
pkg/miurcache/src/miurcache/_pure/: __init__.py  resident.py
pkg/miurcache/t/: test_cache.py
pkg/miurcore/: README.rst  pyproject.toml
pkg/miurcore/src/miurcore/: __init__.py
pkg/miurcore/t/: test_core.py
pkg/miurdemo/: README.rst  pyproject.toml
pkg/miurdemo/src/miurdemo/: __init__.py  __main__.py
pkg/miurdemo/t/: test_demo.py
pkg/miursys/: README.rst  pyproject.toml
pkg/miursys/src/miursys/: __init__.py  localfs.py
pkg/miursys/t/: test_localfs.py
pkg/miurtui/: README.rst  pyproject.toml
pkg/miurtui/src/miurtui/: __init__.py  __main__.py
pkg/miurtui/t/: test_tui.py
pkg/miurview/: README.rst  pyproject.toml
pkg/miurview/src/miurview/: __init__.py
pkg/miurview/t/: test_view.py
relay/: channel.nou  loose-coupling.nou  protocol.nou  queue.nou
reload/: reload.py
representations/: INFO.nou
scenario/: __init__.py  plugin.py
src/: __main__.py  _pkg.py  app.py  cli.py  curses_cmds.py  curses_ext.py  iomgr.py  keymap.py  loop_asyncio.py  loop_selectors.py  miur.py  widget.py
t/: _check.py  ifc_test.py  test_protocol_checks.py
tasker/: TODO.nou
topocomm/: TODO.nou
topoexec/: TODO.nou
try/: e3h_ent_1entity.py  rq_e47_0scratch.py  rq_e4d_1async.py  rq_e4f_2pubsub.py  rq_e57_1proto.py
tui/: TODO.nou  __init__.py
util/: exc.py  exchook.py  jupyter.py  log.py  logger.py  pidfile.py  sig.py
widgets/: scrolllist.py
workflow/: TODO.nou
zeromq/: TODO.nou
(+371 files in other folders)
