# vim:sw=2:ts=2:sts=2:et:
#%USAGE:SETUP:
#       [venv-new]: $ uv sync --project . --group devall [--all-packages --all-extras]
#   [venv-upgrade]: $ uv lock --project . --upgrade
#%USAGE:DEV:
#     [dev-run]: $ ./.venv/bin/python -IBu -Xutf8 -Xdev ./.venv/bin/miur
#   [hotreload]: $ ./.venv/bin/python -IBu -Xutf8 -Xdev -- "./.venv/bin/jurigged" -v --watch="./src" --loop="miur.__main__:main" -- ./.venv/bin/main
#          `OR~: $ ./.venv/bin/jurigged -v -w src -m miur
#%USAGE:CHECK:
#   [qa-lint]: $ for x in "ruff check" basedpyright mypy "pylint ." "bandit -r ."; do uv run --project . --all-packages $x; done
#        `OR?: $ xargs -rn1 -d, uv run --project . --all-packages sh -c <<<"ruff check,basedpyright,mypy,pylint .,bandit -r ."
#   [qa-test]: $ uv run --project . --all-packages pytest -q --tb=short
#   [qa-perf]: $ ./.venv/bin/python -IBu -Xutf8 -Xdev -Ximporttime -Xtracemalloc=5 -m cProfile -s cumulative -- ./.venv/bin/miur
[project]
name = "miur"
version = "1.0.0"
description = "Explorer-first graph workbench for navigating heterogeneous resources through stable handles, serializable ops, and streaming views."
readme = "README.rst"
requires-python = ">=3.14"
license = "GPL-3.0-only"
# license-files = ["LICENSES/*"]
license-files = ["LICENSES/GPL-3.0-only.txt"]
keywords = ["explorer", "graph", "tui", "workflow", "navigation"]
classifiers = [
  # "Development Status :: 5 - Production/Stable",
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  # "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  # "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
  "Typing :: Typed",
]

### CASE:("miur" is meta-package): to use with "uv run --all-packages"
##   BAD: all tools inside each project should run strictly through "uv" -- to auto-fallback to this .toml
# dependencies = [
#   "miurapp",
#   "miurcache",
#   "miurcore",
#   "miursys",
#   "miurtui",
#   "miurview",
# ]
dependencies = ["wcwidth", "rich", "watchdog", "psutil"]  # < only third-party here


### CASE:("miur" is monolith): everything installed at once
##  BAD: should flatten deps/scripts/wheels from all sub-pkgs here
##    OR:TRY: provide it as "miur-all" sub-package
[project.optional-dependencies]
# NOTE: use "ec" (EntityCache) or "dc" (DataCache) as global var name
# mchpy = ...  # USAGE:(switch bw cext/py): $ pip install .[mchpy]
# mchcx = ...
lmdb = ["lmdb>=1.7"]
media = [
  "Pillow>=10.4",
  "PyMuPDF>=1.26",
  "PySide6>=6.11",
  # EXPL:(skip): QtWebView, QtMultimedia, QtCharts, QtDataVisualization, QtTextToSpeech
  #   BAD: skips .pyi stubs too :(
  # "PySide6-Essentials>=6.11", "PySide6-stubs",
]
demo = ["miurdemo"]
all = ["miur[lmdb,media,demo]"]  # RENAME? full,complete,std
default = ["miur[lmdb]"]

[project.scripts]
miur = "miur.__main__:main"
## DISABLED: Root is a workspace coordinator; executable entry points should live in member packages.
##   ALT:SEE: https://github.com/astral-sh/uv/issues/13095
# miur = "miurapp.__main__:main"
# miur-demo = "miurdemo.__main__:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# DEBUG: Inspect the contents
# $ uv build && unzip -l dist/*.whl | grep miur
[tool.hatch.build.targets.wheel]
packages = ["src/miur"]
# OPT: include the sub-packages as if they were local modules
# packages = [
#     "pkg/miurapp/src/miurapp",
#     "pkg/miurcache/src/miurcache",
#     "pkg/miurcore/src/miurcore",
#     "pkg/miursys/src/miursys",
#     "pkg/miurtui/src/miurtui",
#     "pkg/miurview/src/miurview",
# ]


[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "basedpyright>=1.38.2",
  "jurigged[develoop]>=0.6",
  "mypy>=1.19.1",
  "pylint>=4.0.5",
  "pylint-venv>=3.0.4",
  "pylint-qt",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-durations>=1.6.2",
  "pytest-profiling>=1.8.1",
  "pytest-split>=0.11.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.6",
]
devall = [
  { include-group = "dev" },
  "miur[all]",
]


### !uv

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
miurapp = { workspace = true }
# OR: miurcache = { path = "pkg/miurcache" }
miurcache = { workspace = true }
miurcore = { workspace = true }
miurdemo = { workspace = true }
miursys = { workspace = true }
miurtui = { workspace = true }
miurview = { workspace = true }

[tool.uv.workspace]
# OR: members = ["miurcache", "miurcore", ...]
members = ["pkg/*"]

# This tells every subprocess (including conan) where to find the profile
# so you don't have to pass the path manually in every sub-package.
# config-settings = { CONAN_DEFAULT_PROFILE = "{root}/.conan-profile" }


### !pytest

[tool.pytest.ini_options]
testpaths = ["t"]
## This sets the number of pytest-durations shown to 0 by default
# OR: addopts = "-p no:pytest-durations"
# OR: --html=report.html --self-contained-html
# addopts = "--durations=0"
# ALSO: --fail-slow=8.0
addopts = "--strict-markers -m 'not slow' -p no:pytest-durations"
markers = ["slow: marks tests as slow"]
xfail_strict = true


[tool.coverage.run]
source = [
  "miurapp",
  "miurcache",
  "miurcore",
  "miurdemo",
  "miursys",
  "miurtui",
  "miurview",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true


### !ruff

[tool.ruff]
# ruff auto-detects .venv, nothing needed
target-version = "py314"
line-length = 88
src = ["src"]  # ,"pkg","tests"
extend-exclude = ["legacy", "#"]

[tool.ruff.lint]
# Enable Pycodestyle (E), Pyflakes (F), and Isort (I)
select = ["E", "F", "I", "PL", "B", "UP", "A", "ANN"]
ignore = [
  # Ruff formatter does not currently support a separate 'comment-length'.
  # By default, it tries not to reflow comments unless they are docstrings.
  "E501",     # <(comments>=112 > 88): ignore 'line-too-long' so Ruff won't nag
  "E741",     # <(for l in labs/lines): ambiguous-variable-name (l, I, O)
  "E402",     # <(import after __future__ and doc): Module level import not at top of file
  "PLC0415",  # <(import in functions): `import` should be at the top-level of a file
  "PLR1730",  # <(keep less reassignments): `if var < 0: var=0` inof `var=max(var,0)`
  "PLR0911",  # TEMP: Too many return statements (8 > 6)
  "PLR0912",  # TEMP: Too many branches (15 > 12)
  "PLR0913",  # TEMP: Too many arguments in function definition (8 > 5)
  "PLR1714",  # BAD: Consider merging multiple comparisons: `nm not in {b".", b".."}`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Ignore magic value comparisons in all test files

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
# Prevents the formatter from crashing into your long inline pyright comments
# line-ending = "lf"
# wrap-comments = true
# `exclude`, `preview`, `indent-style`, `quote-style`, `nested-string-quote-style`, `skip-magic-trailing-comma`, `line-ending`, `docstring-code-format`, `docstring-code-line-length`


### !pylint

[tool.pylint.main]
py-version = "3.14"
# REF: https://github.com/pylint-dev/pylint-qt
load-plugins = ["pylint_qt"]
extension-pkg-allow-list = ["PySide6"]
recursive = true
ignore-paths = ["legacy/.*"]
ignore = ["t", "alt", "doc", "&", "#", "pkg", "_try", ".git", ".reuse", ".venv"]
ignore-patterns = ["^[_#&].*"]
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "consider-using-dict-items",
    "consider-using-enumerate",
    "consider-using-f-string",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "import-outside-toplevel",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pylint.miscellaneous]
notes = ["[_]", "[!]"]

[tool.pylint.basic]
good-names-rgxs = "^[a-z][a-z0-9]?$"

[tool.pylint.format]
expected-line-ending-format = "LF"
ignore-long-lines = "^\\s*(#.*\\s+)?https?://\\S+$"
max-line-length = 112

[tool.pylint.design]
max-args=6
max-positional-arguments=6


### !mypy

[tool.mypy]
# Paths (Note: TOML doesn't support $MYPY_CONFIG_FILE_DIR; use PWD-relative paths)
cache_dir = "/d/miur/.mypy_cache"
python_executable = "/d/miur/.venv/bin/python"
python_version = "3.14"
# plugins = ["pydantic.mypy"]
platform = "linux"
files = ["src"]  # "pkg","tests"
# REM? live_mode = false
exclude = ["^legacy/", "(^|/)#(/|$)"]  # ["/t/", ".git", ".venv", "out"]
# '^src/.*/bad_module\\.py$'
# exclude = '''(?x)(
#     ^\.(git|reuse|venv)(/|$)            # hidden top-folders
#
#     |^(pkg|_try)(/|$)                   # top-folders
#     |(^|/)(t|alt|doc|[_#&][^/]*)(/|$)   # refs in any folder
# )'''
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
# Strictness settings
strict = true
no_implicit_reexport = true
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
# Features
enable_error_code = ["explicit-override"]


### !pyright and !basedpyright

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]  # "pkg","tests"
exclude = ["legacy", "**/#"]  # , "*/t/*"
extraPaths = ["pkg", "src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# FIXED: it ignores TYPE_CHECKING forward imports
reportImportCycles = "none"
# FIXED? Use Ruff's import organizer
# disableOrganizeImports = true
autoImportCompletions = true
# autoSearchPaths = true
useLibraryCodeForTypes = true


### !bandit

[tool.bandit]
exclude_dirs = ["t", "tests", "venv", ".venv"]
skips = []
