[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "miurapp"
version = "0.1.0"
description = "Application bootstrap and runtime wiring for the miur workspace."
readme = "README.rst"
requires-python = ">=3.14"
license = { text = "GPL-3.0-only" }
dependencies = ["miurcache", "miurcore", "miursys", "miurtui", "miurview"]

[tool.uv.sources]
miurcache = { workspace = true }
miurcore = { workspace = true }
miursys = { workspace = true }
miurtui = { workspace = true }
miurview = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/miurapp"]
