[project]
name = "miurcache"
version = "0.1.0"
description = "Resident DOM/cache state and persistence boundary for miur."
readme = "README.rst"
requires-python = ">=3.14"
license = { text = "GPL-3.0-only" }
dependencies = ["miurcore"]
# requires-python = "==3.14.*"

[project.scripts]
miurcache = "miurcache:main"

[project.optional-dependencies]
lmdb = ["lmdb>=1.7"]

[tool.uv.sources]
miurcore = { workspace = true }


# USAGE: $ uv build
[build-system]
# requires = ["uv_build>=0.11.7,<0.12"]
# build-backend = "uv_build"
# requires = ["hatchling>=1.27"]
# build-backend = "hatchling.build"
# requires = ["setuptools>=68"]
# build-backend = "setuptools.build_meta"
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/miurcache"]
# [tool.hatch.build.targets.wheel.hooks.custom]
# path = "hatch_build.py"
### include this only if your sdist excludes files by default
## [tool.hatch.build.targets.sdist.force-include]
## "hatch_build.py" = "hatch_build.py"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
# WARN: use --reinstall to force a rebuild (when changing files outside cache-keys)
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]
