[project]
name = "miurcache"
version = "0.1.0"
description = "Resident DOM/cache state and persistence boundary for miur."
readme = "README.rst"
requires-python = ">=3.14"  #  "==3.14.*"
license = "GPL-3.0-only"
dependencies = ["miurcore"]

[project.scripts]
miurcache = "miurcache:main"

[project.optional-dependencies]
lmdb = ["lmdb>=1.7"]

[tool.uv.sources]
miurcore = { workspace = true }

# USAGE: $ uv build
[build-system]
# requires = ["uv_build>=0.11.7,<0.12"]
# build-backend = "uv_build"
# requires = ["hatchling>=1.27"]
# build-backend = "hatchling.build"
# requires = ["setuptools>=68"]
# build-backend = "setuptools.build_meta"
requires = ["scikit-build-core>=0.10", "conan"]  # , "pybind11"
build-backend = "scikit_build_core.build"

## BET:TRY: combined
# [build-system]
# requires = ["scikit-build-core-conan"]
# build-backend = "scikit_build_core_conan.build"
# [tool.scikit-build-core-conan]
# # This replaces your manual bootstrapping
# # conan_requirements = ["fmt/10.1.1", "nlohmann_json/3.11.2"]
# conan_profile = "cfg/conan/profiles/clang21"

## USAGE: example of a fully hermetic install command
# Install: $ CONAN_HOME=./.conan_cache conan install . -pr:h ./conan/profiles/clang21 -pr:b ./conan/profiles/clang21 --build=missing
# Build: $ cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=build/conan/conan_toolchain.cmake
## ALT: If you use presets (e.g. CMakeUserPresets.json), you don't even need to remember the path to the toolchain. You just run:
#   $ cmake --preset conan-clang21-release


[tool.scikit-build]
# DEBUG(editable): $ uv run python -c "import miurcache; print(miurcache.__file__)"
# uv sync --reinstall
## Best practice for modern editable installs
editable.mode = "redirect"
## Ensures it re-compiles if you change C++ code
# editable.rebuild = true
## Forces the .so file into the actual src directory
# editable.mode = "inplace"
# minimum-version = "build-system.requires"
# minimum-version = "0.10"
cmake.version = ">=4.2"
cmake.args = ["--preset=default"]
## DISABLED: use preset to be able to build manually with same flags
# cmake.args = [
#   # NOTE: This tells scikit-build-core to let Conan handle dependencies
#   "-DCMAKE_PROJECT_TOP_LEVEL_INCLUDES={root}/../../cfg/conan/conan_provider.cmake",
#   "-DCONAN_PROFILE_BUILD={root}/../../cfg/conan/profiles/clang21",
#   "-DCONAN_PROFILE_HOST={root}/../../cfg/conan/profiles/clang21"
#   ## OPT: define here only for CI/CD and Matrix Testing
#   # "-DPy_LIMITED_API=0x030E0000"
# ]
## HACK: make conan more hermetic
# ALT: export CONAN_HOME=$(pwd)/.conan_cache
# ALT: conan install . --output-folder=build-deps --build=missing
#   WARN: deps should be per-package/project to store generated toolchain
# NOTE: contains the compiler binaries and fetched libs (inof ~/.conan2)
#   WARN: cache should be in the repo/workspace root (shared bw pkgs)
## FAIL: not recognized
# build.env = [ { name = "CONAN_HOME", value = "{root}/../../.conan_cache" } ]
# Ensures the .so/.pyd is mapped to the 'miurcache' Python package directory
# wheel.install-dir = "miurcache"
## Ensures the .so/.pyd file is named exactly 'miurcache_cx'
## and placed in the root of the site-packages folder
# module.name = "miurcache_cx"
## BET? conventional -- to keep it inside same module as shim
# module.name = "_miurcache"
## Tags the wheel as a stable ABI wheel
# wheel.py-api = "cp3"
# Include the C extension folder when creating source distributions
sdist.include = ["ext_cc/*", "src/*"]
## DISABLED:MAYBE:BAD: I will lose "uv run ..." ability to get into pkg/<pkg>/ dir to access build/artf fast
# By default, scikit-build-core uses a temporary folder, and Conan's cmake_layout defaults to a local build folder.
# Redirects the C++ build artifacts (CMake cache, object files)
# {root} in scikit-build-core refers to the directory containing pyproject.toml
# build-dir = "../../out/{package_name}"
build-dir = "build/{wheel_tag}"
wheel.cmake = true

## REF: https://scikit-build-core.readthedocs.io/en/latest/configuration/overrides.html
[[tool.scikit-build.overrides]]
## WARN: uncomment only when distributing, but comment-out during development
# if.any.failed = true  # If the build fails (no compiler, etc.), disable CMake and build as pure Python
# ALT:FAIL:(not supported yet): if.any.config-settings = "pure"  # If the user passes 'pure', disable CMake entirely
# USAGE:(switch impl): $ MIURCACHE_IMPL=ext_cc ./wf -i  # == uv sync
if.env.MIUR_IMPL = "pure"
wheel.cmake = false

# MIURCACHE_BACKEND=pure /d/miur/wf
# MIURCACHE_BACKEND=ext_cc /d/miur/wf
[[tool.scikit-build.overrides]]
if.env.MIUR_IMPL = "ext_cc"
wheel.cmake = true

## FAIL? seems to be ignored
# [tool.scikit-build.cmake.define]
# CONAN_PROFILE_BUILD = "cfg/conan/profiles/clang21"
# CONAN_PROFILE_HOST = "cfg/conan/profiles/clang21"
# CMAKE_PROJECT_TOP_LEVEL_INCLUDES = "cfg/conan/conan_provider.cmake"

# [tool.uv]
# # WARN: use --reinstall to force a rebuild (when changing files outside cache-keys)
# cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]


## ALT
# [tool.hatch.build.targets.wheel]
# packages = ["src/miurcache"]
# [tool.hatch.build.targets.wheel.hooks.custom]
# path = "hatch_build.py"
### include this only if your sdist excludes files by default
## [tool.hatch.build.targets.sdist.force-include]
## "hatch_build.py" = "hatch_build.py"
