
[project.scripts]
miurcache = "miurcache:main"

# USAGE: $ uv build
[build-system]
# requires = ["hatchling>=1.27"]
# build-backend = "hatchling.build"
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/miurcache"]
# [tool.hatch.build.targets.wheel.hooks.custom]
# path = "hatch_build.py"
### include this only if your sdist excludes files by default
## [tool.hatch.build.targets.sdist.force-include]
## "hatch_build.py" = "hatch_build.py"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
# WARN: use --reinstall to force a rebuild (when changing files outside cache-keys)
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]
